--- a/jvfts/jvfts.csproj
+++ b/jvfts/jvfts.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
     <PackageReference Include="System.Runtime.Caching" Version="4.7.0" />
     <PackageReference Include="System.Security.Permissions" Version="4.7.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.21" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Processing\" />
